--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "crypto-js": "^4.2.0",
     "element-plus": "^2.9.1",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
@@ -18,7 +19,9 @@
   "devDependencies": {
     "@element-plus/eslint-config": "^2.9.1",
     "@vitejs/plugin-vue": "^5.2.1",
-    "eslint": "^9.16.0",
+    "axios": "^1.7.9",
+    "eslint": "^9.17.0",
+    "nprogress": "^0.2.0",
     "vite": "^6.0.1",
     "vite-plugin-vue-devtools": "^7.6.5"
   }
