--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "element-plus": "^2.9.1",
+    "express": "^4.21.2",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -20,7 +23,7 @@
     "@element-plus/eslint-config": "^2.9.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "axios": "^1.7.9",
-    "eslint": "^9.17.0",
+    "eslint": "^8.57.1",
     "nprogress": "^0.2.0",
     "vite": "^6.0.1",
     "vite-plugin-vue-devtools": "^7.6.5"
